# buildmcp

./: .gitmodules  CLAUDE.md  CONTRIBUTING.md  MCP_FORMAT_SPECIFICATION.md  QUICKSTART.md  README.md  USAGE.md  checksum.md  github_active_tools.txt  github_inactive_tools.txt  main.py  metamcp_deploy.py  pyproject.toml  servers.json  update_github_tools.py
.github/workflows/: publish.yml
docs/: metamcp-cli.md  metamcp.md
docs/llms/reports/: github-tools-batch-update-2025-10-03.md
har/: bulkImport.har  create.har  delete.har  list.har  namespaces.updateServerStatus.har  namespaces.updateToolStatus.har
src/buildmcp/: __init__.py  __main__.py  builder.py  checksum.py  metamcp.py  metamcp_cli.py  metamcp_tui.py
tests/: __init__.py  conftest.py  test_builder.py  test_checksum.py
