[project]
name = "buildmcp"
version = "0.1.0"
description = "Build and deploy MCP server configurations from templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich",
    "tyro",
    "attrs",
]

[project.scripts]
buildmcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
